@@ -53,6 +53,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Dist::Zilla::Plugin::MetaYAML
  - Dist::Zilla::Plugin::ReadmeFromPod
 
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
 1.001000 2014-10-15T22:42:03Z
  [Added / develop requires]
  - Dist::Zilla 5
